plugins {
  id 'java'
  id 'application'
  id 'idea'
  id "io.spring.dependency-management" version "1.0.7.RELEASE"
}

dependencyManagement {
  imports {
    mavenBom "io.projectreactor:reactor-bom:Bismuth-RELEASE"
  }
}

repositories {

  jcenter()
  maven() {
    url "https://ksqldb-maven.s3.amazonaws.com/maven/"
  }
  maven() {
    url "https://jenkins-confluent-packages-beta-maven.s3.amazonaws.com/6.1.0-beta200715032424/1/maven/"
  }
}

sourceCompatibility = 11

/*
tasks.withType(JavaCompile) {
  options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
  jvmArgs += "--enable-preview"
}
*/

dependencies {

  implementation("io.confluent.ksql:ksqldb-api-client:0.11.0") {
    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
  }
  implementation 'io.projectreactor:reactor-core'
  implementation 'ch.qos.logback:logback-classic:1.2.3'
  compileOnly 'org.projectlombok:lombok:1.18.8'
  annotationProcessor 'org.projectlombok:lombok:1.18.8'

  // Use JUnit Jupiter API for testing.
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'

  // Use JUnit Jupiter Engine for testing.
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
}

application {
  // Define the main class for the application.
  mainClassName = 'io.confluent.developer.reactor-ksqldb.App'
}

test {
  // Use junit platform for unit tests
  useJUnitPlatform()
}
